--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -41,10 +41,9 @@ nor10 <- ne_countries(scale = 10, country = "Norway", returnclass = "sf") %>%
 
 locs <- read_csv(here("data", "localities.csv"), col_types = cols()) %>% 
   st_as_sf(coords=c("utm33.easting", "utm33.northing"), crs = 25833)
-locs <- mutate(locs, species.latin = factor(species.latin, 
-                                            levels = c("Picea sitchensis / lutzii",
-                                                       "Picea abies",
-                                                       "Larix spp.")))
+locs <- mutate(locs, species = factor(species, levels = c("P.sitchensis-lutzii",
+                                                          "P.abies",
+                                                          "Larix")))
 st_bbox(locs)
 
 filter(locs, county %in% c("Rogaland","Hordaland")) %>% 
@@ -77,15 +76,18 @@ g1 <- ggplot() +
                nudge_y = c(-3e4,3e4,4e4), 
                nudge_x = c(0, 10e4, 0), size = 2) +
   geom_sf(data = locs, #st_jitter(locs, amount=5e3)
-          mapping = aes(color = species.latin), 
+          mapping = aes(color = species), 
           show.legend = "point", size = 1.5, alpha = 0.6) +
   geom_sf(data = inset, fill = NA, linetype = "longdash", color = 'black') + 
   geom_sf(data = inset2, fill = NA, linetype = "longdash", color = 'black') + 
-  scale_color_manual(values = CBdark2.3class) +
+  scale_color_manual(labels = c("<span style = 'color:#d95f02;'>*Picea sitchensis* / 
+       *Picea* \u00D7 *lutzii*</span>", 
+       "<span style = 'color:#7570b3;'>*Picea abies*</span>", 
+       "<span style = 'color:#1b9e77;'>*Larix* spp.</span>"), values = CBdark2.3class) +
   coord_sf(xlim = c(-60e3,730e3), ylim = c(6.5e6,7.8e6)) +
   theme_minimal() +
-  theme(legend.position = c(0.35,0.88), legend.title = element_blank(), 
-        legend.text = element_text(face = "italic"),
+  theme(legend.position = c(0.42,0.9), legend.title = element_blank(), 
+        legend.text = element_markdown(),
         axis.title.x=element_blank(), axis.title.y=element_blank(),
         panel.background = element_rect(fill = "ghostwhite"))
 
@@ -207,11 +209,21 @@ dev.off()
 ```{r}
 results.models <- readRDS(here("output","results-models.rds"))
 results.densities <- readRDS(here("output","results-densities.rds"))
+results.sensitivity.offsetting <- readRDS(here("output","results-sensitivity-offsetting.rds"))
 ```
 
 ```{r}
 types <- read_csv(here('data', 'types.csv')) %>% 
-  mutate(name = ifelse(category == 'wetland', paste0(paste0('*',name),'*'), name)) %>% 
+  mutate(name = ifelse(category == 'wetland', paste0(paste0('*',name),'*'), name)) %>%
+  mutate(name.br = case_when(
+    name == 'drained wetland and terrestrialized freshwater sediment' ~
+      'drained wetland and<br>terrestrialized freshwater sediment',
+    name == 'strongly altered ground with semi-natural grassland character' ~
+      'strongly altered ground with<br>semi-natural grassland character',
+    name == 'agriculturally improved grassland with semi-natural character' ~
+      'agriculturally improved grassland<br>with semi-natural character',
+    TRUE ~ name
+  )) %>% 
   rename(nin = type) %>% 
   select(-vegheight, -category, -structuring)
 
@@ -275,8 +287,7 @@ surveyedarea <- plotting %>%
   filter(is.na(hgtclass)) %>% 
   group_by(nin) %>% 
   summarise(total.ha = sum(daa)/10) %>% 
-  arrange(desc(total.ha)) %>% 
-  left_join(types) %>%
+  left_join(types, by = join_by(nin)) %>%
   mutate(name = paste0(name, ', ', round(total.ha), ' ha'))
 plotting <- plotting %>% 
   left_join(perspecies, by = join_by(species, hgtclass)) %>% 
@@ -289,34 +300,147 @@ d <- plotting %>%
   arrange(desc(total.ha)) %>% 
   mutate(name = fct_reorder(name, total.ha, first, .na_rm = TRUE))
 
-ggplot(d, aes(x = density.per.ha, y = name, fill = species)) +
+g <- ggplot(d, aes(x = density.per.ha, y = name)) +
   geom_blank() +
   geom_vline(aes(xintercept = species.per.ha, color = species), linewidth = 1,
              alpha = 0.5, linetype = 1) +
   geom_linerange(aes(xmin=species.per.ha, xmax=density.per.ha, color = species),
                  position = position_dodge(width = 0.5),
                  linetype = '11', alpha = 0.5) +
-  geom_point(aes(color = species), size = csize, shape = 21,
+  geom_point(aes(color = species), size = csize, shape = 19,
              position = position_dodge(width = 0.5)) +
-  scale_x_log10(breaks = c(1, 10, 100),
-                labels = c('1', '10', '100')) +
-  coord_cartesian(xlim = c(1, 100)) +
   scale_color_manual(values = c("P.sitchensis-lutzii" = CBdark2.3class[1],
                                 "P.abies" = CBdark2.3class[2],
                                 "Larix" = CBdark2.3class[3])) +
-  scale_fill_manual(values = alpha(c("P.sitchensis-lutzii" = CBdark2.3class[1],
-                                     "P.abies" = CBdark2.3class[2],
-                                     "Larix" = CBdark2.3class[3]), 1)) +
+  coord_cartesian(xlim = c(1, 100)) +
+  scale_x_log10(breaks = c(1, 10, 100),
+                labels = c('1', '10', '100')) +
   facet_grid(cols = vars(hgtclassname)) +
-  labs(title = "<span style = 'color:#d95f02;'>*Picea sitchensis* / *Picea* \u00D7 *lutzii*</span>, <span style = 'color:#7570b3;'>*Picea abies*</span>, <span style = 'color:#1b9e77;'>*Larix* spp.</span>",
+  labs(title = "<span style = 'color:#d95f02;'>*Picea sitchensis* / 
+       *Picea* \u00D7 *lutzii*</span>, 
+       <span style = 'color:#7570b3;'>*Picea abies*</span>, 
+       <span style = 'color:#1b9e77;'>*Larix* spp.</span>",
        x = "surveyed wildling abundance (ha<sup>-1</sup>)") +
-  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
   topbottomtheme +
   theme(legend.position="none")
+```
 
-ggsave(filename= 'abundance.svg', 
+```{r}
+ggsave(g, filename= 'abundance.svg', 
        path = here('ms', 'figures'),
        scale = 1.4, width = 210, height = 297/2, units = 'mm', dpi = 300)
+```
+
+## relative abundances by species
+
+Only randomseed=2 is plotted
+
+```{r}
+plotting.mod <- results.models %>% 
+  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
+  select(-data, -model) %>% 
+  unnest(preds) %>% 
+  filter(is.na(locality)) %>% 
+  mutate(modeled = TRUE)
+plotting.dens <- results.densities %>% 
+  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
+  unnest(density) %>% 
+  filter(!(n == 0)) %>% 
+  mutate(modeled = FALSE) %>% 
+  select(-daa, -n, -density)
+plotting <- bind_rows(plotting.dens, plotting.mod) %>% 
+  left_join(types, by = 'nin') %>% 
+  mutate(hgtclassname = if_else(is.na(hgtclass), 'height \u2265 30 cm',
+                                'height \u2265 100 cm'),
+         pointshape = if_else(modeled, 'susceptibility (modelled)', 
+                              'vulnerability (surveyed)'))
+
+layoutheights <- distinct(plotting, species, name) %>% 
+  group_by(species) %>% 
+  summarize(n = n()) %>% 
+  arrange(desc(species)) %>% 
+  pull(n)
+```
+
+### P.sitchensis-lutzii
+
+```{r}
+d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name.br = fct_reorder(name.br, fit, first))
+g <- ggplot(d, aes(x = fit, y = name.br, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name.br) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[1], linewidth = 1) +
+  geom_point(color = CBdark2.3class[1], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-4, 1e2)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = "<span style = 'color:#d95f02;'>*Picea sitchensis* / *Picea* \u00D7 *lutzii*</span>",
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
+```
+
+```{r}
+ggsave(g, filename= 'Ps.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[1]*4+20, units = 'mm', dpi = 300)
+```
+
+### P.abies
+
+```{r}
+d <- filter(plotting, species == "P.abies", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name.br = fct_reorder(name.br, fit, first))
+g <- ggplot(d, aes(x = fit, y = name.br, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name.br) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[2], linewidth = 1) +
+  geom_point(color = CBdark2.3class[2], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-5, 1e1)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = "<span style = 'color:#7570b3;'>*Picea abies*</span>",
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
+```
+
+```{r}
+ggsave(g, filename= 'Pa.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[2]*4+20, units = 'mm', dpi = 300)
+```
+
+### Larix
+
+```{r}
+d <- filter(plotting, species == "Larix", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name.br = fct_reorder(name.br, fit, first))
+g <- ggplot(d, aes(x = fit, y = name.br, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name.br) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[3], linewidth = 1) +
+  geom_point(color = CBdark2.3class[3], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-3, 1e3)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = "<span style = 'color:#1b9e77;'>*Larix* spp.</span>",
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
+```
+
+```{r}
+ggsave(g, filename= 'L.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[3]*4+20, units = 'mm', dpi = 300)
 ```
 
 ## sensitivity to random height assignment seed
@@ -383,136 +507,27 @@ g123 <- g1 + g2 + g3 +
 ```
 
 ```{r}
-ggsave(g123, filename= 'abundance-sensitivity-randomseed.svg', 
+ggsave(g123, filename= 'susceptibility-sensitivity-randomseed.svg', 
        path = here('ms', 'figures'),
        scale = 1, width = 210, height = 297, units = 'mm', dpi = 300)
-```
-
-## relative abundances by species
-
-Only randomseed=2 is plotted
-
-```{r}
-plotting.mod <- results.models %>% 
-  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
-  select(-data, -model) %>% 
-  unnest(preds) %>% 
-  filter(is.na(locality)) %>% 
-  mutate(modeled = TRUE)
-plotting.dens <- results.densities %>% 
-  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
-  unnest(density) %>% 
-  filter(!(n == 0)) %>% 
-  mutate(modeled = FALSE) %>% 
-  select(-daa, -n, -density)
-plotting <- bind_rows(plotting.dens, plotting.mod) %>% 
-  left_join(types, by = 'nin') %>% 
-  mutate(hgtclassname = if_else(is.na(hgtclass), 'height \u2265 30 cm',
-                                'height \u2265 100 cm'),
-         pointshape = if_else(modeled, 'susceptibility (modelled)', 
-                              'vulnerability (surveyed)'))
-
-layoutheights <- distinct(plotting, species, name) %>% 
-  group_by(species) %>% 
-  summarize(n = n()) %>% 
-  arrange(desc(species)) %>% 
-  pull(n)
-```
-
-### P.sitchensis-lutzii
-
-```{r}
-d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass), desc(modeled)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[1], size = 1) +
-  geom_point(color = CBdark2.3class[1], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  scale_shape_manual(values = c(20, 1)) +
-  coord_cartesian(xlim = c(1e-4, 1e2)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  labs(title = '*Picea sitchensis* / *Picea* \u00D7 *lutzii*',
-       x = 'relative wildling abundance') +
-  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
-  topbottomtheme
-```
-
-```{r}
-ggsave(g, filename= 'Ps.svg', 
-       path = here('ms', 'figures', 'susceptibility'),
-       scale = 1.4, width = 210, height = layoutheights[1]*3+20, units = 'mm', dpi = 300)
-```
-
-### P.abies
-
-```{r}
-d <- filter(plotting, species == "P.abies", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass), desc(modeled)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[2], size = 1) +
-  geom_point(color = CBdark2.3class[2], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  scale_shape_manual(values = c(20, 1)) +
-  coord_cartesian(xlim = c(1e-5, 1e1)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  labs(title = '*Picea abies*',
-       x = 'relative wildling abundance') +
-  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
-  topbottomtheme
-```
-
-```{r}
-ggsave(g, filename= 'Pa.svg', 
-       path = here('ms', 'figures', 'susceptibility'),
-       scale = 1.4, width = 210, height = layoutheights[2]*3+20, units = 'mm', dpi = 300)
-```
-
-### Larix
-
-```{r}
-d <- filter(plotting, species == "Larix", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass), desc(modeled)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[3], size = 1) +
-  geom_point(color = CBdark2.3class[3], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  scale_shape_manual(values = c(20, 1)) +
-  coord_cartesian(xlim = c(1e-3, 1e3)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  labs(title = '*Larix* spp.',
-       x = 'relative wildling abundance') +
-  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
-  topbottomtheme
-```
-
-```{r}
-ggsave(g, filename= 'L.svg', 
-       path = here('ms', 'figures', 'susceptibility'),
-       scale = 1.4, width = 210, height = layoutheights[3]*3+20, units = 'mm', dpi = 300)
 ```
 
 ## sensitivity to offsetting seed rain
 
 ```{r}
-results.offs <- readRDS(here("output","results-sensitivity-offsetting.rds")) %>% 
+results.sensitivity.offsetting <- results.sensitivity.offsetting %>% 
   rename(fit.end = fit)
-plotting <- results %>% 
+plotting <- results.models %>% 
   filter(is.na(randomseed)) %>% 
   select(species, preds) %>% 
   unnest(preds) %>%
-  filter(is.na(locality)) %>% 
-  left_join(results.offs, by = c('species', 'nin')) %>% 
+  filter(is.na(locality)) %>%
+  select(species, nin, fit) %>% 
+  left_join(results.sensitivity.offsetting, by = c('species', 'nin')) %>% 
   mutate(diff = fit.end - fit) %>% 
-  left_join(types, by = "nin")
+  left_join(types, by = "nin") %>% 
+  mutate(hgtclassname = 'height \u2265 30 cm')
+
  
 d <- filter(plotting, species == "P.sitchensis-lutzii") %>% 
   mutate(name = fct_reorder(name, fit, last))
@@ -520,13 +535,15 @@ g1 <- ggplot(d, aes(x = fit, y = name)) +
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = CBdark2.3class[1], 
-               size = 2, lineend = 'round', linejoin = 'mitre',
+               mapping = aes(yend = name, x = fit, xend = fit.end), 
+               color = CBdark2.3class[1], linewidth = 2, 
+               lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
   geom_point(data = filter(d, diff == 0),
              mapping = aes(x = fit), color = CBdark2.3class[1], size = 2) +  
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-4, 1e2)) +
+  facet_grid(cols = vars(hgtclassname)) +
   toptheme
 
 d <- filter(plotting, species == "P.abies") %>% 
@@ -535,8 +552,9 @@ g2 <- ggplot(d, aes(x = fit, y = name)) +
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = CBdark2.3class[2], 
-               size = 2, lineend = 'round', linejoin = 'mitre',
+               mapping = aes(yend = name, x = fit, xend = fit.end), 
+               color = CBdark2.3class[2], linewidth = 2, 
+               lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
   geom_point(data = filter(d, diff == 0),
              mapping = aes(x = fit), color = CBdark2.3class[2], size = 2) +  
@@ -550,14 +568,15 @@ g3 <- ggplot(d, aes(x = fit, y = name)) +
   geom_blank() +
   geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
   geom_segment(data = filter(d, diff != 0), 
-               mapping = aes(yend = name, x = fit, xend = fit.end), color = CBdark2.3class[3], 
-               size = 2, lineend = 'round', linejoin = 'mitre',
+               mapping = aes(yend = name, x = fit, xend = fit.end), 
+               color = CBdark2.3class[3], linewidth = 2, 
+               lineend = 'round', linejoin = 'mitre',
                arrow = arrow(length = unit(0.001, "npc"), angle = 45, type = "closed")) +
   geom_point(data = filter(d, diff == 0),
              mapping = aes(x = fit), color = CBdark2.3class[3], size = 2) +  
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-3, 1e3)) +
-  labs(x = 'relative establishment likelihood') +
+  labs(x = 'relative wildling abundance') +
   bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
@@ -570,7 +589,7 @@ g123 <- g1 + g2 + g3 +
 ```
 
 ```{r}
-ggsave(g123, filename= 'establishment-sensitivity-offset.svg', 
+ggsave(g123, filename= 'susceptibility-sensitivity-offset.svg', 
        path = here('ms', 'figures'),
        scale = 1, width = 210, height = 297, units = 'mm', dpi = 300)
 ```
